changed grid-template-rows to columns

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   color: #3284ed;
 
   display: grid;
-  grid-template-rows: fr fr fr fr fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .title {
