--- a/style.css
+++ b/style.css
@@ -159,3 +159,14 @@ li {
 .myShelf li div {
   margin: 10px 0px;
 }
+
+#open-popup {
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  font-size: 15px;
+  border-radius: 20px;
+  cursor:default;
+  background: #3284ed;
+  color: #fff;
+}
