--- a/style.css
+++ b/style.css
@@ -150,9 +150,11 @@ ul {
 
 li {
   margin: 10px;
-  background-color: lightgray;
+  background-color: rgb(230, 230, 230);
   border-radius: 5px;
   padding: 10px;
+
+  box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
 
 }
 
